sectioned off and added sectioning colors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
 </head>
 
 <body>
+  <div id="main">
+    <p>Main section</p>
+  </div>
 
+  <div id="staff">
+    <p>Staff section</p>
+  </div>
+
+  <div id="services">
+    <p>Services section</p>
+  </div>
+
+  <div id="specials">
+    <p>Specials section</p>
+  </div>
+
+  <div id="signup">
+    <p>Signup section</p>
+  </div>
 </body>
 
 </html>
