positioning of title at breakpoints

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 	<title>Project 2</title>
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" type="text/css" href="screen.css" />
+	<link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
+	
 </head>
 
 <body>
   <div id="main">
-    <p>Main section</p>
+    <h1>The Spa</h1>
   </div>
 
   <div id="staff">
