changed subheading and p for all breakpoints

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" type="text/css" href="screen.css" />
 	<link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
-	
+
 </head>
 
 <body>
   <div id="main">
-    <h1>The Spa</h1>
+    <h1>The Spa <br></h1>
+    <h2>Located in the Towne Centre Plaza</h2>
+    <p>Delivering peace and tranquility since 1993</p>
   </div>
 
   <div id="staff">
