added dummy staff and formatted img of staff

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   </div>
 
   <div id="staff">
-    <p>Staff section</p>
+    <h1>Meet our staff</h1>
+    <img src="images/woman_ph.png" alt="Photo of staff 1">
+    <img src="images/man_ph.png" alt="Photo of staff 2">
+    <img src="images/woman_ph.png" alt="Photo of staff 3">
   </div>
 
   <div id="services">
