added services and subservient sub services

--- a/index.html
+++ b/index.html
@@ -24,15 +24,53 @@
   </div>
 
   <div id="services">
-    <p>Services section</p>
+    <h1>Services</h1>
+    <ul>
+    	<li>Massage Therapy</li>
+    	<ol>
+    		<li>Swedish massage</li>
+    		<li>Deep Tissue massage</li>
+    		<li>Hot Stone massage</li>
+    		<li>Couples massage</li>
+    		<li>Sports massage</li>
+    		<li>Prenatal &amp; Postnatal massage</li>
+    		<li>Cranio-Sacral massage</li>
+    	</ol>
+    	<li>Facials</li>
+    	<ol>
+    		<li>Dermaplaning facial</li>
+    		<li>Microdermabrasion facial</li>
+    		<li>Classic facial</li>
+    	</ol>
+    	<li>Waxing</li>
+    	<ol>
+    		<li>Brow</li>
+    		<li>Lip</li>
+    		<li>Chin</li>
+    		<li>Full-Arm</li>
+    		<li>Half-Arm</li>
+    		<li>Underarm</li>
+    		<li>Bikini</li>
+    		<li>Brazilian</li>
+    		<li>Back</li>
+    		<li>Full-Leg</li>
+    		<li>Half-Leg</li>
+    	</ol>
+    	<li>Nails</li>
+    	<ol>
+    		<li>Manicure</li>
+    		<li>Pedicure</li>
+    		<li>Shellac Manicure</li>
+    	</ol>
+    </ul>
   </div>
 
   <div id="specials">
-    <p>Specials section</p>
+    <h1>Current Specials</h1>
   </div>
 
   <div id="signup">
-    <p>Signup section</p>
+    <h1>Join Us</h1>
   </div>
 </body>
 
