--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <img src="images/woman_ph.png" alt="Photo of staff 1">
     <img src="images/man_ph.png" alt="Photo of staff 2">
     <img src="images/woman_ph.png" alt="Photo of staff 3">
+    <img src="images/man_ph.png" alt="Photo of staff 4">
   </div>
 
   <div id="services">
