gave staff names

--- a/index.html
+++ b/index.html
@@ -19,9 +19,21 @@
   <div id="staff">
     <h1>Meet our staff</h1>
     <img src="images/woman_ph.png" alt="Photo of staff 1">
+    <figcaption id="staff1">
+    	Addison Morgan 
+    </figcaption>
     <img src="images/man_ph.png" alt="Photo of staff 2">
+    <figcaption id="staff2">
+    	Jake Holland 
+    </figcaption>
     <img src="images/woman_ph.png" alt="Photo of staff 3">
+    <figcaption id="staff3">
+    	Deanna Flores 
+    </figcaption>
     <img src="images/man_ph.png" alt="Photo of staff 4">
+    <figcaption id="staff4">
+    	Gavin Beck 
+    </figcaption>
   </div>
 
   <div id="services">
