commented out the wonky figure and figcations

--- a/index.html
+++ b/index.html
@@ -14,27 +14,40 @@
     <h1>The Spa <br></h1>
     <h2>Located in the Towne Centre Plaza</h2>
     <p>Delivering peace and tranquility since 1993</p>
-  </div>
+  </div> <!-- End of Main -->
 
   <div id="staff">
     <h1>Meet our staff</h1>
-    <img src="images/woman_ph.png" alt="Photo of staff 1">
-    <figcaption id="staff1">
+
+   <!-- <figure role="img" aria labelledby="Addison_Morgan">-->
+    	<img src="images/woman_ph.png" alt="Photo of Addison Morgan">
+    	<!--<figcaption id="staff1">
     	Addison Morgan 
-    </figcaption>
-    <img src="images/man_ph.png" alt="Photo of staff 2">
-    <figcaption id="staff2">
+    	</figcaption>-->
+    <!--</figure>-->
+
+    <!--<figure role="img" aria labelledby="Jake_Holland">-->
+    	<img src="images/man_ph.png" alt="Photo of Jake Holland">
+    	<!--<figcaption id="staff2">
     	Jake Holland 
-    </figcaption>
-    <img src="images/woman_ph.png" alt="Photo of staff 3">
-    <figcaption id="staff3">
+    	</figcaption>-->
+    <!--</figure>-->
+
+    <!--<figure role="img" aria labelledby="Deanna Flores">-->
+    	<img src="images/woman_ph.png" alt="Photo of Deanna Flores">
+    	<!--<figcaption id="staff3">
     	Deanna Flores 
-    </figcaption>
-    <img src="images/man_ph.png" alt="Photo of staff 4">
-    <figcaption id="staff4">
+    	</figcaption>-->
+    <!--</figure>-->
+
+    <!--<figure role="img" aria labelledby="Gavin Beck">-->
+    	<img src="images/man_ph.png" alt="Photo of Gavin Beck">
+    	<!--<figcaption id="staff4">
     	Gavin Beck 
-    </figcaption>
-  </div>
+    	</figcaption>-->
+	<!--</figure>-->
+
+  </div> <!-- End of Staff -->
 
   <div id="services">
     <h1>Services</h1>
@@ -76,15 +89,16 @@
     		<li>Shellac Manicure</li>
     	</ol>
     </ul>
-  </div>
+  </div> <!-- End of Services -->
 
   <div id="specials">
     <h1>Current Specials</h1>
-  </div>
+  </div> <!-- End of Specials -->
 
   <div id="signup">
     <h1>Join Us</h1>
-  </div>
+  </div> <!-- End of Signup -->
+
 </body>
 
 </html>
