added project 1 info for signup

--- a/index.html
+++ b/index.html
@@ -95,8 +95,19 @@
     <h1>Current Specials</h1>
   </div> <!-- End of Specials -->
 
-  <div id="signup">
+  <div id="joinus">
     <h1>Join Us</h1>
+
+       <p>Win free services, get discounts, and stay up-to-date! <br>Sign up for our newsletter now and be
+	    entered to win a free 1-hour massage!</p>
+
+	<div class="signup">
+	<form action="index.html" method="get" class="signup_form">
+      <input type="email" name="email" class="signup_input" placeholder="you@example.com" pattern="^.+@.+$" />
+      <input type="submit" class="signup_submit" value="Subscribe" />
+ 	</form>
+    </div> 
+
   </div> <!-- End of Signup -->
 
 </body>
