uncommented figure/figcations

--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@
   <div id="staff">
     <h1>Meet our staff</h1>
 
-   <!-- <figure role="img" aria labelledby="Addison_Morgan">-->
+   <figure class="staff_pic" role="img" aria labelledby="Addison_Morgan">
     	<img src="images/woman_ph.png" alt="Photo of Addison Morgan">
-    	<!--<figcaption id="staff1">
+    	<figcaption id="staff1">
     	Addison Morgan 
-    	</figcaption>-->
-    <!--</figure>-->
+    	</figcaption>
+    </figure>
 
-    <!--<figure role="img" aria labelledby="Jake_Holland">-->
+    <figure class="staff_pic" role="img" aria labelledby="Jake_Holland">
     	<img src="images/man_ph.png" alt="Photo of Jake Holland">
-    	<!--<figcaption id="staff2">
+    	<figcaption id="staff2">
     	Jake Holland 
-    	</figcaption>-->
-    <!--</figure>-->
+    	</figcaption>
+    </figure>
 
-    <!--<figure role="img" aria labelledby="Deanna Flores">-->
+    <figure class="staff_pic" role="img" aria labelledby="Deanna Flores">
     	<img src="images/woman_ph.png" alt="Photo of Deanna Flores">
-    	<!--<figcaption id="staff3">
+    	<figcaption id="staff3">
     	Deanna Flores 
-    	</figcaption>-->
-    <!--</figure>-->
+    	</figcaption>
+    </figure>
 
-    <!--<figure role="img" aria labelledby="Gavin Beck">-->
+    <figure class="staff_pic" role="img" aria labelledby="Gavin Beck">
     	<img src="images/man_ph.png" alt="Photo of Gavin Beck">
-    	<!--<figcaption id="staff4">
+    	<figcaption id="staff4">
     	Gavin Beck 
-    	</figcaption>-->
-	<!--</figure>-->
+    	</figcaption>
+	</figure>
 
   </div> <!-- End of Staff -->
 
