fixed staff id are aria labels

--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
   <div id="staff">
     <h1>Meet our staff</h1>
 
-   <figure class="staff_pic" role="img" aria labelledby="Addison_Morgan">
+   <figure class="staff_pic" role="img" aria labelledby="amorgan">
     	<img src="images/woman_ph.png" alt="Photo of Addison Morgan">
-    	<figcaption id="staff1">
+    	<figcaption id="amorgan">
     	Addison Morgan 
     	</figcaption>
     </figure>
 
-    <figure class="staff_pic" role="img" aria labelledby="Jake_Holland">
+    <figure class="staff_pic" role="img" aria labelledby="jholland">
     	<img src="images/man_ph.png" alt="Photo of Jake Holland">
-    	<figcaption id="staff2">
+    	<figcaption id="jholland">
     	Jake Holland 
     	</figcaption>
     </figure>
 
-    <figure class="staff_pic" role="img" aria labelledby="Deanna Flores">
+    <figure class="staff_pic" role="img" aria labelledby="dflores">
     	<img src="images/woman_ph.png" alt="Photo of Deanna Flores">
-    	<figcaption id="staff3">
+    	<figcaption id="dflores">
     	Deanna Flores 
     	</figcaption>
     </figure>
 
-    <figure class="staff_pic" role="img" aria labelledby="Gavin Beck">
+    <figure class="staff_pic" role="img" aria labelledby="gbeck">
     	<img src="images/man_ph.png" alt="Photo of Gavin Beck">
-    	<figcaption id="staff4">
+    	<figcaption id="gbeck">
     	Gavin Beck 
     	</figcaption>
 	</figure>
