--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
 
   <div id="specials">
     <h1>Current Specials</h1>
+    <figure class="special" role="img" aria labelledby="winter_tree">
+        <img src="images/winter_tree.jpeg" alt="Photo of a tree in winter">
+        <figcaption id="winter_tree">
+        Kiss Winter Goodbye Massage Special
+        </figcaption>    
   </div> <!-- End of Specials -->
 
   <div id="joinus">
