added flowers and specials desc

--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
         <img src="images/winter_tree.jpeg" alt="Photo of a tree in winter">
         <figcaption id="winter_tree">
         Kiss Winter Goodbye Massage Special
+        <p>All 1-hour massages are only $49</p>
+        </figcaption>  
+
+    <figure class="special" role="img" aria labelledby="flowers">
+        <img src="images/flowers.jpeg" alt="Photo of spring flowers">
+        <figcaption id="flowers">
+        Spring Fever Mani/Pedi
+        <p>Purchase a Shellac Manicure, receive a free Pedicure (* must be used in same visit)</p>
         </figcaption>    
   </div> <!-- End of Specials -->
 
