alphabetized service lists

--- a/index.html
+++ b/index.html
@@ -52,42 +52,47 @@
   <div id="services">
     <h1>Services</h1>
     <ul>
-    	<li>Massage Therapy</li>
-    	<ol>
-    		<li>Swedish massage</li>
-    		<li>Deep Tissue massage</li>
-    		<li>Hot Stone massage</li>
-    		<li>Couples massage</li>
-    		<li>Sports massage</li>
-    		<li>Prenatal &amp; Postnatal massage</li>
-    		<li>Cranio-Sacral massage</li>
-    	</ol>
+   
     	<li>Facials</li>
     	<ol>
+            <li>Classic facial</li>
     		<li>Dermaplaning facial</li>
     		<li>Microdermabrasion facial</li>
-    		<li>Classic facial</li>
     	</ol>
+
+        <li>Massage Therapy</li>
+        <ol>
+            <li>Cranio-Sacral massage</li>
+            <li>Couples massage</li>
+            <li>Deep Tissue massage</li>
+            <li>Hot Stone massage</li>
+            <li>Prenatal &amp; Postnatal massage</li>
+            <li>Sports massage</li>
+            <li>Swedish massage</li> 
+        </ol>
+
+        <li>Nails</li>
+        <ol>
+            <li>Manicure</li>
+            <li>Pedicure</li>
+            <li>Shellac Manicure</li>
+        </ol>
+
     	<li>Waxing</li>
     	<ol>
+            <li>Back</li>
+            <li>Bikini</li>
+            <li>Brazilian</li>
     		<li>Brow</li>
+            <li>Chin</li>
+            <li>Full-Arm</li>
+            <li>Full-Leg</li>
+            <li>Half-Arm</li>
+            <li>Half-Leg</li>
     		<li>Lip</li>
-    		<li>Chin</li>
-    		<li>Full-Arm</li>
-    		<li>Half-Arm</li>
-    		<li>Underarm</li>
-    		<li>Bikini</li>
-    		<li>Brazilian</li>
-    		<li>Back</li>
-    		<li>Full-Leg</li>
-    		<li>Half-Leg</li>
+    		<li>Underarm</li>	
     	</ol>
-    	<li>Nails</li>
-    	<ol>
-    		<li>Manicure</li>
-    		<li>Pedicure</li>
-    		<li>Shellac Manicure</li>
-    	</ol>
+    	
     </ul>
   </div> <!-- End of Services -->
 
@@ -123,6 +128,14 @@
 
   </div> <!-- End of Signup -->
 
+  <script>
+    function go(name, age){
+        alert('Hi ' + name);
+        alert('You are ' + age);
+    }
+
+    go('Renee', 34);
+  </script>
 </body>
 
 </html>
