--- a/index.html
+++ b/index.html
@@ -57,42 +57,38 @@
    
     	<li><a name="facials_list" id="facials" href="#services">Facials</a></li>
     	<ol class="hide" id="facials_list">
-            <li>Classic facial</li>
-    		<li>Dermaplaning facial</li>
-    		<li>Microdermabrasion facial</li>
+            <li>&#10087; Classic facial</li>
+    		<li>&#10087; Dermaplaning facial</li>
+    		<li>&#10087; Microdermabrasion facial</li>
     	</ol>
 
         <li><a name="massage_list" id="massage" href="#services">Massage Therapy</a></li>
         <ol class="hide" id="massage_list">
-            <li>Cranio-Sacral massage</li>
-            <li>Couples massage</li>
-            <li>Deep Tissue massage</li>
-            <li>Hot Stone massage</li>
-            <li>Prenatal &amp; Postnatal massage</li>
-            <li>Sports massage</li>
-            <li>Swedish massage</li> 
+            <li>&#10087; Couples massage</li>
+            <li>&#10087; Cranio-Sacral massage</li>
+            <li>&#10087; Deep Tissue massage</li>
+            <li>&#10087; Hot Stone massage</li>
+            <li>&#10087; Prenatal &amp; Postnatal massage</li>
+            <li>&#10087; Sports massage</li>
+            <li>&#10087; Swedish massage</li> 
         </ol>
 
         <li><a name="nails_list" id="nails" href="#services">Nails</a></li>
         <ol class="hide" id="nails_list">
-            <li>Manicure</li>
-            <li>Pedicure</li>
-            <li>Shellac Manicure</li>
+            <li>&#10087; Manicure</li>
+            <li>&#10087; Pedicure</li>
+            <li>&#10087; Shellac Manicure</li>
         </ol>
 
     	<li><a name="waxing_list" id="waxing" href="#services">Waxing</a></li>
     	<ol class="hide" id="waxing_list">
-            <li>Back</li>
-            <li>Bikini</li>
-            <li>Brazilian</li>
-    		<li>Brow</li>
-            <li>Chin</li>
-            <li>Full-Arm</li>
-            <li>Full-Leg</li>
-            <li>Half-Arm</li>
-            <li>Half-Leg</li>
-    		<li>Lip</li>
-    		<li>Underarm</li>	
+            <li>&#10087; Arms (full or half)</li>
+            <li>&#10087; Back</li>
+            <li>&#10087; Bikini</li>
+            <li>&#10087; Brazilian</li>
+            <li>&#10087; Face (brow, chin, lip)</li>
+            <li>&#10087; Legs (full or half)</li>
+    		<li>&#10087; Underarm</li>	
     	</ol>
     	
     </ul>
@@ -130,7 +126,8 @@
 
   </div> <!-- End of Signup -->
 
-  <script>
+<!--JS to expand the services lists-->
+  <script> 
     var facials = document.getElementById("facials");
     var massage = document.getElementById("massage");
     var nails = document.getElementById("nails");
@@ -158,7 +155,8 @@
         }
     }
 
-  </script>
+  </script> <!-- End of JS for services -->
+
 </body>
 
 </html>
