deleted bad html

--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
   <div id="staff">
     <h1>Meet our staff</h1>
 
-   <figure class="staff_pic" role="img" aria labelledby="amorgan">
+   <figure class="staff_pic" role="img">
     	<img src="images/woman_ph.png" alt="Photo of Addison Morgan">
     	<figcaption id="amorgan">
     	Addison Morgan 
     	</figcaption>
     </figure>
 
-    <figure class="staff_pic" role="img" aria labelledby="jholland">
+    <figure class="staff_pic" role="img">
     	<img src="images/man_ph.png" alt="Photo of Jake Holland">
     	<figcaption id="jholland">
     	Jake Holland 
     	</figcaption>
     </figure>
 
-    <figure class="staff_pic" role="img" aria labelledby="dflores">
+    <figure class="staff_pic" role="img">
     	<img src="images/woman_ph.png" alt="Photo of Deanna Flores">
     	<figcaption id="dflores">
     	Deanna Flores 
     	</figcaption>
     </figure>
 
-    <figure class="staff_pic" role="img" aria labelledby="gbeck">
+    <figure class="staff_pic" role="img">
     	<img src="images/man_ph.png" alt="Photo of Gavin Beck">
     	<figcaption id="gbeck">
     	Gavin Beck 
@@ -55,14 +55,14 @@
     </a>
     <ul>
    
-    	<li><a name="facials_list" id="facials" href="#services">Facials</a></li>
+    	<li><a id="facials" href="#services">Facials</a></li>
     	<ol class="hide" id="facials_list">
             <li>&#10087; Classic facial</li>
     		<li>&#10087; Dermaplaning facial</li>
     		<li>&#10087; Microdermabrasion facial</li>
     	</ol>
 
-        <li><a name="massage_list" id="massage" href="#services">Massage Therapy</a></li>
+        <li><a id="massage" href="#services">Massage Therapy</a></li>
         <ol class="hide" id="massage_list">
             <li>&#10087; Couples massage</li>
             <li>&#10087; Cranio-Sacral massage</li>
@@ -73,14 +73,14 @@
             <li>&#10087; Swedish massage</li> 
         </ol>
 
-        <li><a name="nails_list" id="nails" href="#services">Nails</a></li>
+        <li><a id="nails" href="#services">Nails</a></li>
         <ol class="hide" id="nails_list">
             <li>&#10087; Manicure</li>
             <li>&#10087; Pedicure</li>
             <li>&#10087; Shellac Manicure</li>
         </ol>
 
-    	<li><a name="waxing_list" id="waxing" href="#services">Waxing</a></li>
+    	<li><a id="waxing" href="#services">Waxing</a></li>
     	<ol class="hide" id="waxing_list">
             <li>&#10087; Arms (full or half)</li>
             <li>&#10087; Back</li>
@@ -96,19 +96,19 @@
 
   <div id="specials">
     <h1>Current Specials</h1>
-    <figure class="special" role="img" aria labelledby="winter_tree">
-        <img src="images/winter_tree.jpeg" alt="Photo of a tree in winter">
+    <figure class="special" role="img">
+        <img src="images/winter_tree.jpeg" alt="Photo of a tree in winter"> 
         <figcaption id="winter_tree">
         Kiss Winter Goodbye Massage Special
         <p>All 1-hour massages are only $49</p>
-        </figcaption>  
+        </figcaption>  </figure>
 
-    <figure class="special" role="img" aria labelledby="flowers">
+    <figure class="special" role="img">
         <img src="images/flowers.jpeg" alt="Photo of spring flowers">
         <figcaption id="flowers">
         Spring Fever Mani/Pedi
         <p>Purchase a Shellac Manicure, receive a free Pedicure (* must be used in same visit)</p>
-        </figcaption>    
+        </figcaption>  </figure>  
   </div> <!-- End of Specials -->
 
   <div id="joinus">
